--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -1,12 +1,16 @@
-name: End-to-end tests 🧪
-on: [push]
+name: End-to-end tests
+on:
+    push:
+      branches:
+        - 'main'
+        pull_request:
 jobs:
   cypress-run:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # Install NPM dependencies, cache them correctly
+      # Install npm dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
+      - name: Cypress open
+        uses: cypress-io/github-action@v6
