--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -11,5 +11,5 @@ jobs:
         uses: actions/checkout@v4
       # Install npm dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Cypress open
+      - name: Cypress run
         uses: cypress-io/github-action@v6
